tests/baselines/reference/assignSharedArrayBufferToArrayBuffer(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
assignSharedArrayBufferToArrayBuffer.ts(1,5): error TS2322: Type 'SharedArrayBuffer' is not assignable to type 'ArrayBuffer'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"SharedArrayBuffer"' is not assignable to type '"ArrayBuffer"'.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== assignSharedArrayBufferToArrayBuffer.ts (1 errors) ====
    var foo: ArrayBuffer = new SharedArrayBuffer(1024); // should error
        ~~~
!!! error TS2322: Type 'SharedArrayBuffer' is not assignable to type 'ArrayBuffer'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"SharedArrayBuffer"' is not assignable to type '"ArrayBuffer"'.